Updated edit profile